--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/AntonBazhan/goit-js-hw-10-food-service"
   },
-  "homepage": "https://github.com/AntonBazhan/goit-js-hw-10-food-service#readme",
+  "homepage": "https://github.com/AntonBazhan.github.io/goit-js-hw-10-food-service#readme",
   "devDependencies": {
     "@babel/core": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
